--- a/vercel.json
+++ b/vercel.json
@@ -4,20 +4,12 @@
     {
       "src": "server.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "templates/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "static/*",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.py"
+      "dest": "server.py"
     }
   ]
 }
