--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Flask==2.3.2
-supabase==2.10.0
-gunicorn==21.2.0
-python-dotenv==1.0.0
+Werkzeug==2.3.6
+Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.3
+MarkupSafe==2.1.3
+redis==4.5.5
